In SelectorChecker::checkOneSelector, following code fragment should check element->hasTagName(optionTag). Because, r111497 changed base class of HTMLOptionElement to HTMLElement from HTMLFormControlElement. case CSSSelector::PseudoEnabled: if (element && element->isFormControlElement()) return element->isEnabledFormControl(); break;
Created attachment 144673 [details] Patch 1
Comment on attachment 144673 [details] Patch 1 Could you review this patch? Thanks in advance.
Comment on attachment 144673 [details] Patch 1 View in context: https://bugs.webkit.org/attachment.cgi?id=144673&action=review > Source/WebCore/css/SelectorChecker.cpp:1054 > - if (element && (element->isFormControlElement() || element->hasTagName(optgroupTag))) > + if (element && (element->isFormControlElement() || element->hasTagName(optionTag) || element->hasTagName(optgroupTag))) Would you remove one space after the second || please?
<rdar://problem/11553964>
Created attachment 144677 [details] Patch 2
Comment on attachment 144677 [details] Patch 2 Remove an extra space.
Comment on attachment 144677 [details] Patch 2 Rejecting attachment 144677 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/LayoutTests/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://queues.webkit.org/results/12845746
Created attachment 144690 [details] Patch 3
Comment on attachment 144690 [details] Patch 3 Clearing flags on attachment: 144690 Committed r118891: <http://trac.webkit.org/changeset/118891>
All reviewed patches have been landed. Closing bug.