REGRESSION(r111497): The "option" element doesn't match CSS pseudo class :enabled https://bugs.webkit.org/show_bug.cgi?id=87719

Reviewed by Kent Tamura.

Source/WebCore:

This patch added checking of "option" element for CSS pseudo class :enabled as same as
:disabled to selector checker. Before r111497, it was done by using isFormControlElement.
After that revision, HTMLOptionElement was no longer derived from HTMLFormControlElement.

Test: fast/form/select/optgroup-rendering.html

* css/SelectorChecker.cpp:
(WebCore::SelectorChecker::checkOneSelector): Checking element is option element as same
as PseudoDisabled in PseudoEnabled case.

LayoutTests:

* platform/chromium-linux/fast/forms/select/optgroup-rendering-expected.png: Updated. Text color of option element is bule from CSS pseudo class option:enabled.
* platform/chromium/test_expectations.txt: Update comment.


Canonical link: https://commits.webkit.org/105615@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118891 268f45cc-cd09-0410-ab3c-d52691b4dbfc